added preloader, v2.2.6